<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_instruction_create_condominium"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:text="@string/welcome_to_syndic_hand"
                android:textColor="@android:color/black"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:text="@string/first_thing_to_do_is"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_entry_condominium"
                    style="@style/DefaultButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:padding="8dp"
                    android:text="@string/entry" />


                <Button
                    android:id="@+id/button_already_entried"
                    style="@style/SecundaryButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:padding="8dp"
                    android:text="@string/already_entried" />


            </LinearLayout>


            <LinearLayout
                android:visibility="invisible"
                android:id="@+id/view_instructions_already_entried"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:text="@string/already_entried"
                    android:textColor="@android:color/black"
                    android:textSize="22sp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:text="@string/if_you_already_entry_condominium_please_enter_with_condominium_code"
                    android:textSize="16sp" />

                <EditText
                    style="@style/DefaultEditText"
                    android:id="@+id/edit_text_condominium_code"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:hint="@string/condominium_code" />

                <Button
                    android:id="@+id/button_enter_condominium"
                    style="@style/DefaultButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:padding="8dp"
                    android:text="@string/enter" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>