<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/defaultBackgroundColor"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_bar_color"
        android:elevation="4dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edit_text_name"
                        style="@style/DefaultEditText"
                        android:hint="@string/common_area_name"
                        android:inputType="text" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_column="1"
                    app:layout_row="1">

                    <EditText
                        android:id="@+id/edit_text_max_people"
                        style="@style/DefaultEditText"
                        android:hint="@string/max_people"
                        android:inputType="text|number" />

                </android.support.design.widget.TextInputLayout>


                <TextView
                    style="@style/DefaultTextView"
                    android:layout_marginTop="8dp"
                    android:text="@string/Wortime" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <EditText
                            android:id="@+id/edit_text_work_time_begin"
                            style="@style/DefaultEditText"
                            android:hint="@string/worktime_begin"
                            android:inputType="number" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <EditText
                            android:id="@+id/edit_text_work_time_end"
                            style="@style/DefaultEditText"
                            android:hint="@string/worktime_end"
                            android:inputType="number" />

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edit_text_reservation_cost"
                        style="@style/DefaultEditText"
                        android:hint="@string/reservation_cost"
                        android:inputType="numberDecimal" />

                </android.support.design.widget.TextInputLayout>


                <CheckBox
                    android:id="@+id/checkbox_allow_reservations"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/necessary_syndic_validation"
                    android:textColor="@color/defaultTextColor" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edit_text_observation"
                        style="@style/DefaultEditText"
                        android:hint="@string/observation"
                        android:inputType="text"
                        />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>
        </ScrollView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            style="@style/DefaultFab"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="16dp"
            android:src="@drawable/ic_add_white" />
    </RelativeLayout>
</LinearLayout>